Fixed the issue with the not stickyheader working on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+html {
+    min-height: 100vh;
+    display: inline-flex;
+}
+
 body {
     background-color: #C68BD6!important;
 }
@@ -82,6 +87,11 @@ body {
 }
 
 @media only screen and (max-width: 700px) {
+    .parent{
+        width: 50%;
+        margin: 6px 0;
+    }
+
     .responsive {
         width: 50%;
         margin: 6px 0;
@@ -89,6 +99,10 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
+    .parent {
+        width: 100%;
+    }
+
     .responsive {
         width: 100%;
         font-weight: bold;
